--- a/perlcritic.rc
+++ b/perlcritic.rc
@@ -12,3 +12,22 @@ allow_includes = 1
 [Documentation::PodSpelling]
 stop_words = metadata KiokuDB KENTNL KENTNL's DZil plugin
 
+[Subroutines::ProhibitUnusedPrivateSubroutines]
+private_name_regex = _(?!build_)\w
+
+[TestingAndDebugging::RequireUseStrict]
+equivalent_modules = Moose
+
+[TestingAndDebugging::RequireUseWarnings]
+equivalent_modules = Moose
+
+
+
+
+
+
+
+
+
+
+
