--- a/dist.ini
+++ b/dist.ini
@@ -8,14 +8,15 @@ copyright_holder = Kent Fredric <kentnl@cpan.org>
 ; [Bootstrap::lib]
 
 [@Author::KENTNL]
-version_major     = 0
-version_minor     = 1
-; the following data denotes when this minor was minted
-version_rel_year  = 2010
-version_rel_month = 11
-version_rel_day   = 3
-version_rel_hour  = 17
-version_rel_time_zone = Pacific/Auckland
+git_versions = 1
 twitter_hash_tags = #perl #cpan
+;version_major     = 0
+;version_minor     = 1
+; the following data denotes when this minor was minted
+;version_rel_year  = 2010
+;version_rel_month = 11
+;version_rel_day   = 3
+;version_rel_hour  = 17
+;version_rel_time_zone = Pacific/Auckland
 
 [Prereqs]
