--- a/dist.ini
+++ b/dist.ini
@@ -8,8 +8,11 @@ copyright_holder = Kent Fredric <kentnl@cpan.org>
 ; [Bootstrap::lib]
 
 [@Author::KENTNL]
+:version = 2.012000
 git_versions = 1
 twitter_hash_tags = #perl #cpan
+normal_form = numify
+mantissa    = 6
 ;version_major     = 0
 ;version_minor     = 1
 ; the following data denotes when this minor was minted
