Build results of 9b26ccb (on master)

--- a/META.yml
+++ b/META.yml
@@ -1,5 +1,5 @@
 ---
-abstract: "KENTNL's DZil plugin testing tool."
+abstract: "KENTNL's DZil plugin testing tool"
 author:
   - 'Kent Fredric <kentnl@cpan.org>'
 build_requires:
@@ -22,21 +22,22 @@ name: Dist-Zilla-Util-Test-KENTNL
 provides:
   Dist::Zilla::Util::Test::KENTNL:
     file: lib/Dist/Zilla/Util/Test/KENTNL.pm
-    version: '1.000000'
+    version: '0.010158'
 requires:
   Carp: '0'
   Dist::Zilla::Tester: '0'
   Sub::Exporter: '0'
   Test::DZil: '0'
   Try::Tiny: '0'
-  perl: '5.006'
+  perl: '5.008'
   strict: '0'
+  utf8: '0'
   warnings: '0'
 resources:
   bugtracker: https://github.com/kentfredric/Dist-Zilla-Util-Test-KENTNL/issues
   homepage: https://github.com/kentfredric/Dist-Zilla-Util-Test-KENTNL
   repository: https://github.com/kentfredric/Dist-Zilla-Util-Test-KENTNL.git
-version: '1.000000'
+version: '0.010158'
 x_BuiltWith:
   modules:
     CPAN::Meta: '2.133380'
@@ -103,6 +104,7 @@ x_BuiltWith:
     Test::Pod::Coverage: '1.08'
     Try::Tiny: '0.19'
     strict: '1.08'
+    utf8: '1.13'
     version: '0.9907'
     warnings: '1.21'
   perl:
