--- a/perlcritic.rc
+++ b/perlcritic.rc
@@ -21,7 +21,8 @@ equivalent_modules = Moose
 [TestingAndDebugging::RequireUseWarnings]
 equivalent_modules = Moose
 
-
+[Tics::ProhibitLongLines]
+base_max = 130
 
 
 
