--- a/perlcritic.rc
+++ b/perlcritic.rc
@@ -12,7 +12,15 @@ allow_includes = 1
 
 [-CodeLayout::RequireASCII]
 
+[-CodeLayout::ProhibitHashBarewords]
+
+[-Documentation::RequirePodSections]
+
 [-Miscellanea::ProhibitUselessNoCritic]
+
+[-Miscellanea::RequireRcsKeywords]
+
+[-Editor::RequireEmacsFileVariables]
 
 [Documentation::PodSpelling]
 spell_command = aspell list --lang en_US
