Improve perlcritic.rc

--- a/perlcritic.rc
+++ b/perlcritic.rc
@@ -1,5 +1,4 @@
 severity = 1
-exclude = RequireTidyCode RequirePodSections ProhibitPostfixControls RequireRcsKeywords RequireExplicitPackage
 include = Moose::ProhibitMultipleWiths Moose::ProhibitNewMethod Moose::RequireCleanNamespace Moose::RequireMakeImmutable
 color = 1
 verbose = 9
@@ -8,6 +7,29 @@ verbose = 9
 allow_includes = 1
 
 [CodeLayout::ProhibitTrailingWhitespace]
+
+[-CodeLayout::RequireTidyCode]
+
+[-CodeLayout::RequireASCII]
+
+[-CodeLayout::ProhibitHashBarewords]
+
+[-Compatibility::PodMinimumVersion]
+
+[-Documentation::RequirePodSections]
+
+[-Documentation::RequirePODUseEncodingUTF8]
+
+[-Miscellanea::ProhibitUselessNoCritic]
+
+[-Miscellanea::RequireRcsKeywords]
+
+[-Modules::RequireExplicitPackage]
+
+[-Editor::RequireEmacsFileVariables]
+
+[Lax::RequireExplicitPackage::ExceptForPragmata]
+allowed_pragmata = strict warnings utf8 perlversion
 
 [Documentation::PodSpelling]
 spell_command = aspell list --lang en_US
