--- a/perlcritic.rc
+++ b/perlcritic.rc
@@ -14,6 +14,8 @@ allow_includes = 1
 
 [-CodeLayout::ProhibitHashBarewords]
 
+[-Compatibility::PodMinimumVersion]
+
 [-Documentation::RequirePodSections]
 
 [-Documentation::RequirePODUseEncodingUTF8]
@@ -27,7 +29,7 @@ allow_includes = 1
 [-Editor::RequireEmacsFileVariables]
 
 [Lax::RequireExplicitPackage::ExceptForPragmata]
-supported_parameters = strict warnings utf8
+allowed_pragmata = strict warnings utf8 perlversion
 
 [Documentation::PodSpelling]
 spell_command = aspell list --lang en_US
