--- a/dist.ini
+++ b/dist.ini
@@ -13,6 +13,8 @@ git_versions = 1
 twitter_hash_tags = #perl #cpan
 normal_form = numify
 mantissa    = 6
+toolkit     = eumm
+toolkit_hardness = soft
 ;version_major     = 0
 ;version_minor     = 1
 ; the following data denotes when this minor was minted
