--- a/META.yml
+++ b/META.yml
@@ -4,11 +4,13 @@ author:
   - 'Kent Fredric <kentnl@cpan.org>'
 build_requires:
   ExtUtils::MakeMaker: '0'
+  File::Spec: '0'
   File::Spec::Functions: '0'
   List::Util: '0'
+  Scalar::Util: '0'
   Test::Fatal: '0'
   Test::More: '0.89'
-  version: '0'
+  version: '0.77'
 configure_requires:
   ExtUtils::MakeMaker: '6.30'
 dynamic_config: 0
@@ -21,7 +23,7 @@ name: Dist-Zilla-Util-Test-KENTNL
 provides:
   Dist::Zilla::Util::Test::KENTNL:
     file: lib/Dist/Zilla/Util/Test/KENTNL.pm
-    version: '1.000001'
+    version: '1.000002'
 requires:
   Carp: '0'
   Dist::Zilla::Tester: '0'
@@ -36,10 +38,11 @@ resources:
   bugtracker: https://github.com/kentfredric/Dist-Zilla-Util-Test-KENTNL/issues
   homepage: https://github.com/kentfredric/Dist-Zilla-Util-Test-KENTNL
   repository: https://github.com/kentfredric/Dist-Zilla-Util-Test-KENTNL.git
-version: '1.000001'
+version: '1.000002'
 x_BuiltWith:
   modules:
     CPAN::Meta: '2.141520'
+    CPAN::Meta::Prereqs: '2.141520'
     CPAN::Meta::Requirements: '2.125'
     Carp: '1.34'
     Dist::Zilla::App::Command::bakeini: '0.001001'
@@ -53,7 +56,7 @@ x_BuiltWith:
     Dist::Zilla::Plugin::Git::Commit: '2.023'
     Dist::Zilla::Plugin::Git::CommitBuild: '2.023'
     Dist::Zilla::Plugin::Git::GatherDir: '2.023'
-    Dist::Zilla::Plugin::Git::NextRelease: '0.002010'
+    Dist::Zilla::Plugin::Git::NextRelease: '0.002011'
     Dist::Zilla::Plugin::Git::Tag: '2.023'
     Dist::Zilla::Plugin::GithubMeta: '0.46'
     Dist::Zilla::Plugin::License: '5.019'
@@ -61,9 +64,9 @@ x_BuiltWith:
     Dist::Zilla::Plugin::Manifest: '5.019'
     Dist::Zilla::Plugin::ManifestSkip: '5.019'
     Dist::Zilla::Plugin::MetaConfig: '5.019'
-    Dist::Zilla::Plugin::MetaData::BuiltWith: '1.000000'
+    Dist::Zilla::Plugin::MetaData::BuiltWith: '1.000001'
     Dist::Zilla::Plugin::MetaJSON: '5.019'
-    Dist::Zilla::Plugin::MetaProvides::Package: '2.000001'
+    Dist::Zilla::Plugin::MetaProvides::Package: '2.000002'
     Dist::Zilla::Plugin::MetaTests: '5.019'
     Dist::Zilla::Plugin::MetaYAML: '5.019'
     Dist::Zilla::Plugin::MinimumPerl: '1.003'
@@ -71,35 +74,37 @@ x_BuiltWith:
     Dist::Zilla::Plugin::PodSyntaxTests: '5.019'
     Dist::Zilla::Plugin::PodWeaver: '4.005'
     Dist::Zilla::Plugin::Prereqs: '5.019'
-    Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled: '0.001000'
+    Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled: '0.002000'
     Dist::Zilla::Plugin::ReadmeAnyFromPod: '0.141760'
     Dist::Zilla::Plugin::ReadmeFromPod: '0.21'
-    Dist::Zilla::Plugin::RewriteVersion::Sanitized: '0.001000'
-    Dist::Zilla::Plugin::RunExtraTests: '0.021'
+    Dist::Zilla::Plugin::RewriteVersion::Sanitized: '0.001001'
+    Dist::Zilla::Plugin::RunExtraTests: '0.022'
     Dist::Zilla::Plugin::Test::CPAN::Changes: '0.008'
-    Dist::Zilla::Plugin::Test::Compile::PerFile: '0.002000'
+    Dist::Zilla::Plugin::Test::Compile::PerFile: '0.002001'
     Dist::Zilla::Plugin::Test::Kwalitee: '2.07'
     Dist::Zilla::Plugin::Test::MinimumVersion: '2.000005'
     Dist::Zilla::Plugin::Test::Perl::Critic: '2.112410'
-    Dist::Zilla::Plugin::Test::ReportPrereqs: '0.013'
+    Dist::Zilla::Plugin::Test::ReportPrereqs: '0.014'
     Dist::Zilla::Plugin::TestRelease: '5.019'
     Dist::Zilla::Plugin::Twitter: '0.025'
     Dist::Zilla::Plugin::UploadToCPAN: '5.019'
-    Dist::Zilla::PluginBundle::Author::KENTNL: '2.016002'
+    Dist::Zilla::PluginBundle::Author::KENTNL: '2.016004'
     Dist::Zilla::Tester: '5.019'
     ExtUtils::MakeMaker: '6.98'
+    File::Spec: '3.48'
     File::Spec::Functions: '3.48'
     List::Util: '1.39'
     Pod::Coverage::TrustPod: '0.100003'
+    Scalar::Util: '1.39'
     Sub::Exporter: '0.987'
-    Test::CPAN::Changes: '0.28'
+    Test::CPAN::Changes: '0.29'
     Test::CPAN::Meta: '0.23'
     Test::DZil: '5.019'
     Test::Fatal: '0.013'
-    Test::Kwalitee: '1.18'
+    Test::Kwalitee: '1.19'
     Test::More: '1.001003'
     Test::Pod: '1.48'
-    Test::Pod::Coverage: '1.08'
+    Test::Pod::Coverage: '1.10'
     Try::Tiny: '0.22'
     strict: '1.08'
     utf8: '1.14'
@@ -117,7 +122,7 @@ x_BuiltWith:
     myarchname: x86_64-linux
     osname: linux
   platform: linux
-  uname: 'Linux 3.15.2-aufs x86_64 GenuineIntel GNU/Linux'
+  uname: 'Linux 3.15.5-aufs x86_64 GenuineIntel GNU/Linux'
 x_Dist_Zilla:
   perl:
     version: '5.021001'
@@ -144,7 +149,7 @@ x_Dist_Zilla:
           inherit_version: '1'
           meta_noindex: '1'
       name: '@Author::KENTNL/MetaProvides::Package'
-      version: '2.000001'
+      version: '2.000002'
     -
       class: Dist::Zilla::Plugin::MetaData::BuiltWith
       config:
@@ -161,7 +166,7 @@ x_Dist_Zilla:
               - -i
             uname_call: uname
       name: '@Author::KENTNL/MetaData::BuiltWith'
-      version: '1.000000'
+      version: '1.000001'
     -
       class: Dist::Zilla::Plugin::Git::GatherDir
       config:
@@ -206,7 +211,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::Test::ReportPrereqs
       name: '@Author::KENTNL/Test::ReportPrereqs'
-      version: '0.013'
+      version: '0.014'
     -
       class: Dist::Zilla::Plugin::Test::Kwalitee
       name: '@Author::KENTNL/Test::Kwalitee'
@@ -235,7 +240,7 @@ x_Dist_Zilla:
           test_template: 01-basic.t.tpl
           xt_mode: ~
       name: '@Author::KENTNL/Test::Compile::PerFile'
-      version: '0.002000'
+      version: '0.002001'
     -
       class: Dist::Zilla::Plugin::Test::Perl::Critic
       name: '@Author::KENTNL/Test::Perl::Critic'
@@ -251,7 +256,7 @@ x_Dist_Zilla:
           mantissa: '6'
           normal_form: numify
       name: '@Author::KENTNL/RewriteVersion::Sanitized'
-      version: '0.001000'
+      version: '0.001001'
     -
       class: Dist::Zilla::Plugin::PodWeaver
       config:
@@ -387,7 +392,7 @@ x_Dist_Zilla:
         Dist::Zilla::Role::TestRunner:
           default_jobs: '10'
       name: '@Author::KENTNL/RunExtraTests'
-      version: '0.021'
+      version: '0.022'
     -
       class: Dist::Zilla::Plugin::TestRelease
       name: '@Author::KENTNL/TestRelease'
@@ -434,7 +439,7 @@ x_Dist_Zilla:
         Dist::Zilla::Plugin::Git::Tag:
           branch: ~
           signed: 0
-          tag: 1.000001-source
+          tag: 1.000002-source
           tag_format: '%v-source'
           tag_message: v%v
           time_zone: local
@@ -445,7 +450,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::Git::NextRelease
       name: '@Author::KENTNL/Git::NextRelease'
-      version: '0.002010'
+      version: '0.002011'
     -
       class: Dist::Zilla::Plugin::BumpVersionAfterRelease
       name: '@Author::KENTNL/BumpVersionAfterRelease'
@@ -488,7 +493,7 @@ x_Dist_Zilla:
         Dist::Zilla::Plugin::Git::Tag:
           branch: releases
           signed: 0
-          tag: '1.000001'
+          tag: '1.000002'
           tag_format: '%v'
           tag_message: v%v
           time_zone: local
@@ -524,7 +529,7 @@ x_Dist_Zilla:
             - ExtUtils::MakeMaker
             - Test::More
       name: '@Author::KENTNL/Prereqs::Recommend::MatchInstalled'
-      version: '0.001000'
+      version: '0.002000'
     -
       class: Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled
       config:
@@ -537,7 +542,7 @@ x_Dist_Zilla:
             - Dist::Zilla::PluginBundle::Author::KENTNL
             - Dist::Zilla::App::Command::bakeini
       name: '@Author::KENTNL/always_latest_develop_bundle'
-      version: '0.001000'
+      version: '0.002000'
     -
       class: Dist::Zilla::Plugin::Prereqs
       config:
