--- a/META.yml
+++ b/META.yml
@@ -5,16 +5,12 @@ author:
 build_requires:
   ExtUtils::MakeMaker: '0'
   File::Spec: '0'
-  File::Spec::Functions: '0'
-  List::Util: '0'
-  Scalar::Util: '0'
   Test::Fatal: '0'
   Test::More: '0.89'
-  version: '0.77'
 configure_requires:
-  ExtUtils::MakeMaker: '6.30'
-dynamic_config: 0
-generated_by: 'Dist::Zilla version 5.019, CPAN::Meta::Converter version 2.141520'
+  ExtUtils::MakeMaker: '0'
+dynamic_config: '0'
+generated_by: 'Dist::Zilla version 5.020, CPAN::Meta::Converter version 2.142060'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -23,7 +19,7 @@ name: Dist-Zilla-Util-Test-KENTNL
 provides:
   Dist::Zilla::Util::Test::KENTNL:
     file: lib/Dist/Zilla/Util/Test/KENTNL.pm
-    version: '1.000002'
+    version: '1.000003'
 requires:
   Carp: '0'
   Dist::Zilla::Tester: '0'
@@ -35,21 +31,19 @@ requires:
   utf8: '0'
   warnings: '0'
 resources:
-  bugtracker: https://github.com/kentfredric/Dist-Zilla-Util-Test-KENTNL/issues
-  homepage: https://github.com/kentfredric/Dist-Zilla-Util-Test-KENTNL
-  repository: https://github.com/kentfredric/Dist-Zilla-Util-Test-KENTNL.git
-version: '1.000002'
+  bugtracker: https://github.com/kentnl/Dist-Zilla-Util-Test-KENTNL/issues
+  homepage: https://github.com/kentnl/Dist-Zilla-Util-Test-KENTNL
+  repository: https://github.com/kentnl/Dist-Zilla-Util-Test-KENTNL.git
+version: '1.000003'
 x_BuiltWith:
   modules:
-    CPAN::Meta: '2.141520'
-    CPAN::Meta::Prereqs: '2.141520'
-    CPAN::Meta::Requirements: '2.125'
+    CPAN::Meta: '2.142060'
     Carp: '1.34'
     Dist::Zilla::App::Command::bakeini: '0.001001'
     Dist::Zilla::Plugin::Authority: '1.006'
-    Dist::Zilla::Plugin::AutoPrereqs: '5.019'
+    Dist::Zilla::Plugin::AutoPrereqs: '5.020'
     Dist::Zilla::Plugin::BumpVersionAfterRelease: '0.002'
-    Dist::Zilla::Plugin::ConfirmRelease: '5.019'
+    Dist::Zilla::Plugin::ConfirmRelease: '5.020'
     Dist::Zilla::Plugin::CopyFilesFromBuild: '0.103510'
     Dist::Zilla::Plugin::EOLTests: '0.02'
     Dist::Zilla::Plugin::Git::Check: '2.023'
@@ -59,21 +53,21 @@ x_BuiltWith:
     Dist::Zilla::Plugin::Git::NextRelease: '0.002011'
     Dist::Zilla::Plugin::Git::Tag: '2.023'
     Dist::Zilla::Plugin::GithubMeta: '0.46'
-    Dist::Zilla::Plugin::License: '5.019'
-    Dist::Zilla::Plugin::MakeMaker: '5.019'
-    Dist::Zilla::Plugin::Manifest: '5.019'
-    Dist::Zilla::Plugin::ManifestSkip: '5.019'
-    Dist::Zilla::Plugin::MetaConfig: '5.019'
-    Dist::Zilla::Plugin::MetaData::BuiltWith: '1.000001'
-    Dist::Zilla::Plugin::MetaJSON: '5.019'
-    Dist::Zilla::Plugin::MetaProvides::Package: '2.000002'
-    Dist::Zilla::Plugin::MetaTests: '5.019'
-    Dist::Zilla::Plugin::MetaYAML: '5.019'
+    Dist::Zilla::Plugin::License: '5.020'
+    Dist::Zilla::Plugin::MakeMaker: '5.020'
+    Dist::Zilla::Plugin::Manifest: '5.020'
+    Dist::Zilla::Plugin::ManifestSkip: '5.020'
+    Dist::Zilla::Plugin::MetaConfig: '5.020'
+    Dist::Zilla::Plugin::MetaData::BuiltWith: '1.001000'
+    Dist::Zilla::Plugin::MetaJSON: '5.020'
+    Dist::Zilla::Plugin::MetaProvides::Package: '2.000003'
+    Dist::Zilla::Plugin::MetaTests: '5.020'
+    Dist::Zilla::Plugin::MetaYAML: '5.020'
     Dist::Zilla::Plugin::MinimumPerl: '1.003'
-    Dist::Zilla::Plugin::PodCoverageTests: '5.019'
-    Dist::Zilla::Plugin::PodSyntaxTests: '5.019'
+    Dist::Zilla::Plugin::PodCoverageTests: '5.020'
+    Dist::Zilla::Plugin::PodSyntaxTests: '5.020'
     Dist::Zilla::Plugin::PodWeaver: '4.005'
-    Dist::Zilla::Plugin::Prereqs: '5.019'
+    Dist::Zilla::Plugin::Prereqs: '5.020'
     Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled: '0.002000'
     Dist::Zilla::Plugin::ReadmeAnyFromPod: '0.141760'
     Dist::Zilla::Plugin::ReadmeFromPod: '0.21'
@@ -84,22 +78,19 @@ x_BuiltWith:
     Dist::Zilla::Plugin::Test::Kwalitee: '2.07'
     Dist::Zilla::Plugin::Test::MinimumVersion: '2.000005'
     Dist::Zilla::Plugin::Test::Perl::Critic: '2.112410'
-    Dist::Zilla::Plugin::Test::ReportPrereqs: '0.014'
-    Dist::Zilla::Plugin::TestRelease: '5.019'
+    Dist::Zilla::Plugin::Test::ReportPrereqs: '0.018'
+    Dist::Zilla::Plugin::TestRelease: '5.020'
     Dist::Zilla::Plugin::Twitter: '0.025'
-    Dist::Zilla::Plugin::UploadToCPAN: '5.019'
-    Dist::Zilla::PluginBundle::Author::KENTNL: '2.016004'
-    Dist::Zilla::Tester: '5.019'
+    Dist::Zilla::Plugin::UploadToCPAN: '5.020'
+    Dist::Zilla::PluginBundle::Author::KENTNL: '2.016007'
+    Dist::Zilla::Tester: '5.020'
     ExtUtils::MakeMaker: '6.98'
     File::Spec: '3.48'
-    File::Spec::Functions: '3.48'
-    List::Util: '1.39'
     Pod::Coverage::TrustPod: '0.100003'
-    Scalar::Util: '1.39'
     Sub::Exporter: '0.987'
-    Test::CPAN::Changes: '0.29'
+    Test::CPAN::Changes: '0.30'
     Test::CPAN::Meta: '0.23'
-    Test::DZil: '5.019'
+    Test::DZil: '5.020'
     Test::Fatal: '0.013'
     Test::Kwalitee: '1.19'
     Test::More: '1.001003'
@@ -108,7 +99,6 @@ x_BuiltWith:
     Try::Tiny: '0.22'
     strict: '1.08'
     utf8: '1.14'
-    version: '0.9908'
     warnings: '1.24'
   perl:
     original: v5.21.1
@@ -130,7 +120,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::MetaConfig
       name: '@Author::KENTNL/MetaConfig'
-      version: '5.019'
+      version: '5.020'
     -
       class: Dist::Zilla::Plugin::GithubMeta
       name: '@Author::KENTNL/GithubMeta'
@@ -143,13 +133,13 @@ x_Dist_Zilla:
             -
               class: Dist::Zilla::Plugin::FinderCode
               name: '@Author::KENTNL/MetaProvides::Package/AUTOVIV/:InstallModulesPM'
-              version: '5.019'
+              version: '5.020'
         Dist::Zilla::Role::MetaProvider::Provider:
           inherit_missing: '1'
           inherit_version: '1'
           meta_noindex: '1'
       name: '@Author::KENTNL/MetaProvides::Package'
-      version: '2.000002'
+      version: '2.000003'
     -
       class: Dist::Zilla::Plugin::MetaData::BuiltWith
       config:
@@ -166,7 +156,7 @@ x_Dist_Zilla:
               - -i
             uname_call: uname
       name: '@Author::KENTNL/MetaData::BuiltWith'
-      version: '1.000001'
+      version: '1.001000'
     -
       class: Dist::Zilla::Plugin::Git::GatherDir
       config:
@@ -179,19 +169,19 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::License
       name: '@Author::KENTNL/License'
-      version: '5.019'
+      version: '5.020'
     -
       class: Dist::Zilla::Plugin::MetaJSON
       name: '@Author::KENTNL/MetaJSON'
-      version: '5.019'
+      version: '5.020'
     -
       class: Dist::Zilla::Plugin::MetaYAML
       name: '@Author::KENTNL/MetaYAML'
-      version: '5.019'
+      version: '5.020'
     -
       class: Dist::Zilla::Plugin::Manifest
       name: '@Author::KENTNL/Manifest'
-      version: '5.019'
+      version: '5.020'
     -
       class: Dist::Zilla::Plugin::CopyFilesFromBuild
       name: '@Author::KENTNL/CopyXBuild'
@@ -199,19 +189,19 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::MetaTests
       name: '@Author::KENTNL/MetaTests'
-      version: '5.019'
+      version: '5.020'
     -
       class: Dist::Zilla::Plugin::PodCoverageTests
       name: '@Author::KENTNL/PodCoverageTests'
-      version: '5.019'
+      version: '5.020'
     -
       class: Dist::Zilla::Plugin::PodSyntaxTests
       name: '@Author::KENTNL/PodSyntaxTests'
-      version: '5.019'
+      version: '5.020'
     -
       class: Dist::Zilla::Plugin::Test::ReportPrereqs
       name: '@Author::KENTNL/Test::ReportPrereqs'
-      version: '0.014'
+      version: '0.018'
     -
       class: Dist::Zilla::Plugin::Test::Kwalitee
       name: '@Author::KENTNL/Test::Kwalitee'
@@ -227,7 +217,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: '@Author::KENTNL/Test::Compile::PerFile/AUTOVIV/:InstallModulesPM'
-      version: '5.019'
+      version: '5.020'
     -
       class: Dist::Zilla::Plugin::Test::Compile::PerFile
       config:
@@ -248,7 +238,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::ManifestSkip
       name: '@Author::KENTNL/ManifestSkip'
-      version: '5.019'
+      version: '5.020'
     -
       class: Dist::Zilla::Plugin::RewriteVersion::Sanitized
       config:
@@ -350,7 +340,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::AutoPrereqs
       name: '@Author::KENTNL/AutoPrereqs'
-      version: '5.019'
+      version: '5.020'
     -
       class: Dist::Zilla::Plugin::Prereqs
       config:
@@ -358,7 +348,7 @@ x_Dist_Zilla:
           phase: develop
           type: suggests
       name: '@Author::KENTNL/BundleDevelSuggests'
-      version: '5.019'
+      version: '5.020'
     -
       class: Dist::Zilla::Plugin::MinimumPerl
       name: '@Author::KENTNL/MinimumPerl'
@@ -373,7 +363,7 @@ x_Dist_Zilla:
         Dist::Zilla::Role::TestRunner:
           default_jobs: '10'
       name: '@Author::KENTNL/MakeMaker'
-      version: '5.019'
+      version: '5.020'
     -
       class: Dist::Zilla::Plugin::ReadmeFromPod
       name: '@Author::KENTNL/ReadmeFromPod'
@@ -396,11 +386,11 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::TestRelease
       name: '@Author::KENTNL/TestRelease'
-      version: '5.019'
+      version: '5.020'
     -
       class: Dist::Zilla::Plugin::ConfirmRelease
       name: '@Author::KENTNL/ConfirmRelease'
-      version: '5.019'
+      version: '5.020'
     -
       class: Dist::Zilla::Plugin::Git::Check
       config:
@@ -438,8 +428,8 @@ x_Dist_Zilla:
       config:
         Dist::Zilla::Plugin::Git::Tag:
           branch: ~
-          signed: 0
-          tag: 1.000002-source
+          signed: '0'
+          tag: 1.000003-source
           tag_format: '%v-source'
           tag_message: v%v
           time_zone: local
@@ -480,7 +470,7 @@ x_Dist_Zilla:
           branch: build/%b
           build_root: ~
           message: 'Build results of %h (on %b)'
-          multiple_inheritance: 0
+          multiple_inheritance: '0'
           release_branch: releases
           release_message: 'Build results of %h (on %b)'
         Dist::Zilla::Role::Git::Repo:
@@ -492,8 +482,8 @@ x_Dist_Zilla:
       config:
         Dist::Zilla::Plugin::Git::Tag:
           branch: releases
-          signed: 0
-          tag: '1.000002'
+          signed: '0'
+          tag: '1.000003'
           tag_format: '%v'
           tag_message: v%v
           time_zone: local
@@ -504,7 +494,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::UploadToCPAN
       name: '@Author::KENTNL/UploadToCPAN'
-      version: '5.019'
+      version: '5.020'
     -
       class: Dist::Zilla::Plugin::Twitter
       name: '@Author::KENTNL/Twitter'
@@ -550,7 +540,7 @@ x_Dist_Zilla:
           phase: develop
           type: requires
       name: '@Author::KENTNL/::Role::BundleDeps'
-      version: '5.019'
+      version: '5.020'
     -
       class: Dist::Zilla::Plugin::Prereqs
       config:
@@ -558,46 +548,46 @@ x_Dist_Zilla:
           phase: runtime
           type: requires
       name: Prereqs
-      version: '5.019'
+      version: '5.020'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':InstallModules'
-      version: '5.019'
+      version: '5.020'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':IncModules'
-      version: '5.019'
+      version: '5.020'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':TestFiles'
-      version: '5.019'
+      version: '5.020'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ExecFiles'
-      version: '5.019'
+      version: '5.020'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ShareFiles'
-      version: '5.019'
+      version: '5.020'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':MainModule'
-      version: '5.019'
+      version: '5.020'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':AllFiles'
-      version: '5.019'
+      version: '5.020'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':NoFiles'
-      version: '5.019'
+      version: '5.020'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: '@Author::KENTNL/MetaProvides::Package/AUTOVIV/:InstallModulesPM'
-      version: '5.019'
+      version: '5.020'
   zilla:
     class: Dist::Zilla::Dist::Builder
     config:
       is_trial: '0'
-    version: '5.019'
+    version: '5.020'
 x_authority: cpan:KENTNL
