--- a/META.yml
+++ b/META.yml
@@ -5,7 +5,6 @@ author:
 build_requires:
   ExtUtils::MakeMaker: '0'
   File::Spec: '0'
-  Test::Fatal: '0'
   Test::More: '0.89'
 configure_requires:
   ExtUtils::MakeMaker: '0'
@@ -20,12 +19,20 @@ provides:
   Dist::Zilla::Util::Test::KENTNL:
     file: lib/Dist/Zilla/Util/Test/KENTNL.pm
     version: '1.000004'
+  Dist::Zilla::Util::Test::KENTNL::dztest:
+    file: lib/Dist/Zilla/Util/Test/KENTNL/dztest.pm
+    version: '1.000004'
+recommends:
+  Test::More: '1.001003'
 requires:
   Carp: '0'
   Dist::Zilla::Tester: '0'
-  Dist::Zilla::Util::Test::KENTNL::dztest: '0'
+  Moose: '0'
+  Path::Tiny: '0'
   Sub::Exporter: '0'
   Test::DZil: '0'
+  Test::Fatal: '0'
+  Test::More: '0.89'
   Try::Tiny: '0'
   perl: '5.008'
   strict: '0'
@@ -37,8 +44,6 @@ resources:
   repository: https://github.com/kentnl/Dist-Zilla-Util-Test-KENTNL.git
 version: '1.000004'
 x_BuiltWith:
-  failures:
-    Dist::Zilla::Util::Test::KENTNL::dztest: 'module was not found in INC'
   modules:
     CPAN::Meta: '2.142060'
     Carp: '1.34'
@@ -91,6 +96,8 @@ x_BuiltWith:
     Dist::Zilla::Tester: '5.020'
     ExtUtils::MakeMaker: '6.98'
     File::Spec: '3.48'
+    Moose: '2.1211'
+    Path::Tiny: '0.056'
     Pod::Coverage::TrustPod: '0.100003'
     Sub::Exporter: '0.987'
     Test::CPAN::Changes: '0.30'
@@ -242,6 +249,7 @@ x_Dist_Zilla:
         Dist::Zilla::Plugin::Test::Compile::PerFile:
           file:
             - lib/Dist/Zilla/Util/Test/KENTNL.pm
+            - lib/Dist/Zilla/Util/Test/KENTNL/dztest.pm
           path_translator: base64_filter
           prefix: t/00-compile
           skip: []
