--- a/META.yml
+++ b/META.yml
@@ -26,6 +26,7 @@ recommends:
   Test::More: '1.001003'
 requires:
   Carp: '0'
+  Data::DPath: '0'
   Dist::Zilla::Tester: '0'
   Moose: '0'
   Path::Tiny: '0'
@@ -47,6 +48,7 @@ x_BuiltWith:
   modules:
     CPAN::Meta: '2.142060'
     Carp: '1.34'
+    Data::DPath: '0.50'
     Dist::Zilla::App::Command::bakeini: '0.001002'
     Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes: '0.002002'
     Dist::Zilla::Plugin::Authority: '1.006'
