--- a/META.yml
+++ b/META.yml
@@ -5,7 +5,6 @@ author:
 build_requires:
   ExtUtils::MakeMaker: '0'
   File::Spec: '0'
-  Test::Fatal: '0'
   Test::More: '0.89'
 configure_requires:
   ExtUtils::MakeMaker: '0'
@@ -19,12 +18,22 @@ name: Dist-Zilla-Util-Test-KENTNL
 provides:
   Dist::Zilla::Util::Test::KENTNL:
     file: lib/Dist/Zilla/Util/Test/KENTNL.pm
-    version: '1.000003'
+    version: '1.001000'
+  Dist::Zilla::Util::Test::KENTNL::dztest:
+    file: lib/Dist/Zilla/Util/Test/KENTNL/dztest.pm
+    version: '1.001000'
+recommends:
+  Test::More: '1.001003'
 requires:
   Carp: '0'
+  Data::DPath: '0'
   Dist::Zilla::Tester: '0'
+  Moose: '0'
+  Path::Tiny: '0'
   Sub::Exporter: '0'
   Test::DZil: '0'
+  Test::Fatal: '0'
+  Test::More: '0.89'
   Try::Tiny: '0'
   perl: '5.008'
   strict: '0'
@@ -34,12 +43,14 @@ resources:
   bugtracker: https://github.com/kentnl/Dist-Zilla-Util-Test-KENTNL/issues
   homepage: https://github.com/kentnl/Dist-Zilla-Util-Test-KENTNL
   repository: https://github.com/kentnl/Dist-Zilla-Util-Test-KENTNL.git
-version: '1.000003'
+version: '1.001000'
 x_BuiltWith:
   modules:
     CPAN::Meta: '2.142060'
     Carp: '1.34'
-    Dist::Zilla::App::Command::bakeini: '0.001001'
+    Data::DPath: '0.50'
+    Dist::Zilla::App::Command::bakeini: '0.001002'
+    Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes: '0.002002'
     Dist::Zilla::Plugin::Authority: '1.006'
     Dist::Zilla::Plugin::AutoPrereqs: '5.020'
     Dist::Zilla::Plugin::BumpVersionAfterRelease: '0.002'
@@ -49,8 +60,9 @@ x_BuiltWith:
     Dist::Zilla::Plugin::Git::Check: '2.023'
     Dist::Zilla::Plugin::Git::Commit: '2.023'
     Dist::Zilla::Plugin::Git::CommitBuild: '2.023'
+    Dist::Zilla::Plugin::Git::Contributors: '0.007'
     Dist::Zilla::Plugin::Git::GatherDir: '2.023'
-    Dist::Zilla::Plugin::Git::NextRelease: '0.002011'
+    Dist::Zilla::Plugin::Git::NextRelease: '0.002012'
     Dist::Zilla::Plugin::Git::Tag: '2.023'
     Dist::Zilla::Plugin::GithubMeta: '0.46'
     Dist::Zilla::Plugin::License: '5.020'
@@ -58,41 +70,43 @@ x_BuiltWith:
     Dist::Zilla::Plugin::Manifest: '5.020'
     Dist::Zilla::Plugin::ManifestSkip: '5.020'
     Dist::Zilla::Plugin::MetaConfig: '5.020'
-    Dist::Zilla::Plugin::MetaData::BuiltWith: '1.001000'
+    Dist::Zilla::Plugin::MetaData::BuiltWith: '1.002000'
     Dist::Zilla::Plugin::MetaJSON: '5.020'
-    Dist::Zilla::Plugin::MetaProvides::Package: '2.000003'
+    Dist::Zilla::Plugin::MetaProvides::Package: '2.000004'
     Dist::Zilla::Plugin::MetaTests: '5.020'
     Dist::Zilla::Plugin::MetaYAML: '5.020'
     Dist::Zilla::Plugin::MinimumPerl: '1.003'
     Dist::Zilla::Plugin::PodCoverageTests: '5.020'
     Dist::Zilla::Plugin::PodSyntaxTests: '5.020'
-    Dist::Zilla::Plugin::PodWeaver: '4.005'
+    Dist::Zilla::Plugin::PodWeaver: '4.006'
     Dist::Zilla::Plugin::Prereqs: '5.020'
-    Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled: '0.002000'
-    Dist::Zilla::Plugin::ReadmeAnyFromPod: '0.141760'
+    Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled: '0.002001'
+    Dist::Zilla::Plugin::ReadmeAnyFromPod: '0.142250'
     Dist::Zilla::Plugin::ReadmeFromPod: '0.21'
-    Dist::Zilla::Plugin::RewriteVersion::Sanitized: '0.001001'
+    Dist::Zilla::Plugin::RewriteVersion::Sanitized: '0.001003'
     Dist::Zilla::Plugin::RunExtraTests: '0.022'
     Dist::Zilla::Plugin::Test::CPAN::Changes: '0.008'
-    Dist::Zilla::Plugin::Test::Compile::PerFile: '0.002001'
-    Dist::Zilla::Plugin::Test::Kwalitee: '2.07'
+    Dist::Zilla::Plugin::Test::Compile::PerFile: '0.002002'
+    Dist::Zilla::Plugin::Test::Kwalitee: '2.08'
     Dist::Zilla::Plugin::Test::MinimumVersion: '2.000005'
     Dist::Zilla::Plugin::Test::Perl::Critic: '2.112410'
-    Dist::Zilla::Plugin::Test::ReportPrereqs: '0.018'
+    Dist::Zilla::Plugin::Test::ReportPrereqs: '0.019'
     Dist::Zilla::Plugin::TestRelease: '5.020'
     Dist::Zilla::Plugin::Twitter: '0.025'
     Dist::Zilla::Plugin::UploadToCPAN: '5.020'
-    Dist::Zilla::PluginBundle::Author::KENTNL: '2.016007'
+    Dist::Zilla::PluginBundle::Author::KENTNL: '2.019000'
     Dist::Zilla::Tester: '5.020'
     ExtUtils::MakeMaker: '6.98'
     File::Spec: '3.48'
+    Moose: '2.1211'
+    Path::Tiny: '0.056'
     Pod::Coverage::TrustPod: '0.100003'
     Sub::Exporter: '0.987'
     Test::CPAN::Changes: '0.30'
     Test::CPAN::Meta: '0.23'
     Test::DZil: '5.020'
     Test::Fatal: '0.013'
-    Test::Kwalitee: '1.19'
+    Test::Kwalitee: '1.22'
     Test::More: '1.001003'
     Test::Pod: '1.48'
     Test::Pod::Coverage: '1.10'
@@ -139,7 +153,7 @@ x_Dist_Zilla:
           inherit_version: '1'
           meta_noindex: '1'
       name: '@Author::KENTNL/MetaProvides::Package'
-      version: '2.000003'
+      version: '2.000004'
     -
       class: Dist::Zilla::Plugin::MetaData::BuiltWith
       config:
@@ -156,7 +170,17 @@ x_Dist_Zilla:
               - -i
             uname_call: uname
       name: '@Author::KENTNL/MetaData::BuiltWith'
-      version: '1.001000'
+      version: '1.002000'
+    -
+      class: Dist::Zilla::Plugin::Git::Contributors
+      config:
+        Dist::Zilla::Plugin::Git::Contributors:
+          include_authors: '0'
+          include_releaser: '0'
+          order_by: name
+          paths: []
+      name: '@Author::KENTNL/Git::Contributors'
+      version: '0.007'
     -
       class: Dist::Zilla::Plugin::Git::GatherDir
       config:
@@ -201,11 +225,14 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::Test::ReportPrereqs
       name: '@Author::KENTNL/Test::ReportPrereqs'
-      version: '0.018'
+      version: '0.019'
     -
       class: Dist::Zilla::Plugin::Test::Kwalitee
+      config:
+        Dist::Zilla::Plugin::Test::Kwalitee:
+          skiptest: []
       name: '@Author::KENTNL/Test::Kwalitee'
-      version: '2.07'
+      version: '2.08'
     -
       class: Dist::Zilla::Plugin::EOLTests
       name: '@Author::KENTNL/EOLTests'
@@ -224,13 +251,14 @@ x_Dist_Zilla:
         Dist::Zilla::Plugin::Test::Compile::PerFile:
           file:
             - lib/Dist/Zilla/Util/Test/KENTNL.pm
+            - lib/Dist/Zilla/Util/Test/KENTNL/dztest.pm
           path_translator: base64_filter
           prefix: t/00-compile
           skip: []
           test_template: 01-basic.t.tpl
           xt_mode: ~
       name: '@Author::KENTNL/Test::Compile::PerFile'
-      version: '0.002001'
+      version: '0.002002'
     -
       class: Dist::Zilla::Plugin::Test::Perl::Critic
       name: '@Author::KENTNL/Test::Perl::Critic'
@@ -246,7 +274,7 @@ x_Dist_Zilla:
           mantissa: '6'
           normal_form: numify
       name: '@Author::KENTNL/RewriteVersion::Sanitized'
-      version: '0.001001'
+      version: '0.001003'
     -
       class: Dist::Zilla::Plugin::PodWeaver
       config:
@@ -336,7 +364,7 @@ x_Dist_Zilla:
               name: Legal
               version: '4.006'
       name: '@Author::KENTNL/PodWeaver'
-      version: '4.005'
+      version: '4.006'
     -
       class: Dist::Zilla::Plugin::AutoPrereqs
       name: '@Author::KENTNL/AutoPrereqs'
@@ -365,13 +393,17 @@ x_Dist_Zilla:
       name: '@Author::KENTNL/MakeMaker'
       version: '5.020'
     -
+      class: Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes
+      name: '@Author::KENTNL/Author::KENTNL::RecommendFixes'
+      version: '0.002002'
+    -
       class: Dist::Zilla::Plugin::ReadmeFromPod
       name: '@Author::KENTNL/ReadmeFromPod'
       version: '0.21'
     -
       class: Dist::Zilla::Plugin::ReadmeAnyFromPod
       name: '@Author::KENTNL/ReadmeAnyFromPod'
-      version: '0.141760'
+      version: '0.142250'
     -
       class: Dist::Zilla::Plugin::Test::CPAN::Changes
       name: '@Author::KENTNL/Test::CPAN::Changes'
@@ -429,7 +461,7 @@ x_Dist_Zilla:
         Dist::Zilla::Plugin::Git::Tag:
           branch: ~
           signed: '0'
-          tag: 1.000003-source
+          tag: 1.001000-source
           tag_format: '%v-source'
           tag_message: v%v
           time_zone: local
@@ -440,7 +472,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::Git::NextRelease
       name: '@Author::KENTNL/Git::NextRelease'
-      version: '0.002011'
+      version: '0.002012'
     -
       class: Dist::Zilla::Plugin::BumpVersionAfterRelease
       name: '@Author::KENTNL/BumpVersionAfterRelease'
@@ -483,7 +515,7 @@ x_Dist_Zilla:
         Dist::Zilla::Plugin::Git::Tag:
           branch: releases
           signed: '0'
-          tag: '1.000003'
+          tag: '1.001000'
           tag_format: '%v'
           tag_message: v%v
           time_zone: local
@@ -519,7 +551,7 @@ x_Dist_Zilla:
             - ExtUtils::MakeMaker
             - Test::More
       name: '@Author::KENTNL/Prereqs::Recommend::MatchInstalled'
-      version: '0.002000'
+      version: '0.002001'
     -
       class: Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled
       config:
@@ -532,7 +564,7 @@ x_Dist_Zilla:
             - Dist::Zilla::PluginBundle::Author::KENTNL
             - Dist::Zilla::App::Command::bakeini
       name: '@Author::KENTNL/always_latest_develop_bundle'
-      version: '0.002000'
+      version: '0.002001'
     -
       class: Dist::Zilla::Plugin::Prereqs
       config:
