--- a/dist.ini
+++ b/dist.ini
@@ -18,6 +18,12 @@ show_config = 1
 show_uname = 1
 uname_args = -s -o -r -m -i
 
+[Git::Contributors / @Author::KENTNL/Git::Contributors]
+:version = 0.006
+include_authors = 0
+include_releaser = 0
+order_by = name
+
 [Git::GatherDir / @Author::KENTNL/Git::GatherDir]
 exclude_filename = README
 exclude_filename = README.mkdn
@@ -70,7 +76,7 @@ replacer = replace_with_blank
 -phase = develop
 -type = suggests
 Dist::Zilla::App::Command::bakeini = 0.001000
-Dist::Zilla::PluginBundle::Author::KENTNL = 2.016002
+Dist::Zilla::PluginBundle::Author::KENTNL = 2.019000
 
 [MinimumPerl / @Author::KENTNL/MinimumPerl]
 
@@ -82,6 +88,9 @@ locate_comment = 1
 
 [MakeMaker / @Author::KENTNL/MakeMaker]
 default_jobs = 10
+
+[Author::KENTNL::RecommendFixes / @Author::KENTNL/Author::KENTNL::RecommendFixes]
+:version = 0.001001
 
 [ReadmeFromPod / @Author::KENTNL/ReadmeFromPod]
 
@@ -143,6 +152,7 @@ modules = Dist::Zilla::App::Command::bakeini
 [Prereqs / @Author::KENTNL/::Role::BundleDeps]
 -phase = develop
 -relationship = requires
+Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes = 0.001001
 Dist::Zilla::Plugin::Authority = 1.006
 Dist::Zilla::Plugin::AutoPrereqs = 0
 Dist::Zilla::Plugin::BumpVersionAfterRelease = 0
@@ -152,6 +162,7 @@ Dist::Zilla::Plugin::EOLTests = 0
 Dist::Zilla::Plugin::Git::Check = 0
 Dist::Zilla::Plugin::Git::Commit = 0
 Dist::Zilla::Plugin::Git::CommitBuild = 0
+Dist::Zilla::Plugin::Git::Contributors = 0.006
 Dist::Zilla::Plugin::Git::GatherDir = 0
 Dist::Zilla::Plugin::Git::NextRelease = 0
 Dist::Zilla::Plugin::Git::Tag = 0
